# coen346_cpu_scheduler

./: .gitignore  README.md  clock.py  input.txt  main.py  output.txt  parser.py  process.py  pyproject.toml  scheduler.py  schedulerProcess.py  schedulerProcessStates.py  userProcess.py
process/: process.py
